--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
 <body>
-  <div class="global">
+  
+  <div class="container">
   <div id="inicio" class="encabezado1">
     <p class="ingresaryregistrar">Ingresar&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<span
     style="color:yellow;"><u>Registrar</u></span></p>
@@ -60,7 +61,7 @@
   </div>
 
   <div class="backgroundimage2">
-    <img src="./images/logo3.png" class="imagenfondo2">
+    <img src="./images/logo3.png" width="65%"  class="imagenfondo2">
   </div>
   <div class="vacio"></div>
 <div class="encabezadoRecetario">
@@ -115,7 +116,7 @@
   <div class="receta">
   
     <div>
-      <h2 id="tostadas" class="tituloReceta">TOSTADAS FRANCESAS</h2>
+      <h2 id="tostadas" class="tituloReceta"> TOSTADAS FRANCESAS </h2>
       <img src="./images/tostadas1.png" class="imagenes2">
     </div>
 
@@ -161,7 +162,7 @@
 
     <div>
       <h2 id="yogur" class="tituloReceta">YOGUR CON FRUTAS</h2>
-      <img src="./images/yogurconfrutas.jpg" class="imagenes2">
+      <img src="./images//yogurconfrutas1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -199,7 +200,7 @@
 
     <div>
       <h2 id="sandwich" class="tituloReceta">SANDWICH</h2>
-      <img src="./images/sandwich.jpg" class="imagenes2">
+      <img src="./images/sandwich1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -239,7 +240,7 @@
 
     <div>
       <h2 id="cafeconleche" class="tituloReceta">CAFÉ CON LECHE</h2>
-      <img src="./images/cafe.jpg" class="imagenes2">
+      <img src="./images/cafe1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -275,7 +276,7 @@
 
     <div>
       <h2 id="zumo" class="tituloReceta">ZUMO DE NARANJA</h2>
-      <img src="./images/zumo.jpg" class="imagenes2">
+      <img src="./images/zumo1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -311,7 +312,7 @@
 
     <div>
       <h2 id="tortitas" class="tituloReceta">TORTITAS</h2>
-      <img src="./images/tortitas.jpg" class="imagenes2">
+      <img src="./images/tortitas1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -358,7 +359,7 @@
    <div class="receta">
     <div>
       <h2 id="tortillafrancesa" class="tituloReceta">TORTILLA FRANCESA</h2>
-      <img src="./images/tortillaFrancesa.jpg" class="imagenes2">
+      <img src="./images/tortillaFrancesa1.png" class="imagenes2">
     </div>
 
     <div class="contenido">
@@ -404,7 +405,8 @@
           </p>
     </footer>
 
-  </div> 
+  
+</div>
 </body>
 
 </html>
